# AgX

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
crates/agx/: Cargo.toml  build.rs
crates/agx-cli/: Cargo.toml  README.md
crates/agx-cli/src/: batch.rs  main.rs
crates/agx-cli/tests/: integration.rs
crates/agx-e2e/: Cargo.toml  README.md
crates/agx-e2e/fixtures/looks/: base_cinematic.toml  blade_runner.toml  bw_high_contrast.toml  bw_lofi.toml  bw_street.toml  cinema_warm.toml  cool_shadows.toml  cross_process.toml  dehaze_landscape.toml  detail_boost.toml  faded_film.toml  haze_effect.toml  kodachrome_64.toml  neo_noir.toml  nordic_fade.toml  portra_400.toml  s_curve_contrast.toml  sharp_landscape.toml  soft_portrait.toml  teal_orange.toml  vignette_test.toml
crates/agx-e2e/fixtures/looks/luts/: blade_runner.cube  bw_high_contrast.cube  bw_lofi.cube  bw_street.cube  cinema_warm.cube  kodachrome_64.cube  neo_noir.cube  nordic_fade.cube  portra_400.cube
crates/agx-e2e/fixtures/presets/: high_contrast.toml  hsl_vibrant.toml  warm_exposure.toml
crates/agx-e2e/src/: lib.rs
crates/agx-e2e/tests/: cli_pipeline.rs  library_pipeline.rs
crates/agx-lut-gen/: Cargo.toml
crates/agx/src/: error.rs  lib.rs  metadata.rs
crates/agx/src/adjust/: README.md  dehaze.rs  detail.rs  mod.rs
crates/agx/src/decode/: README.md  libraw_meta.c  mod.rs  orientation.rs  raw.rs
crates/agx/src/encode/: mod.rs
crates/agx/src/engine/: README.md  mod.rs
crates/agx/src/lut/: README.md  cube.rs  mod.rs
crates/agx/src/preset/: README.md  mod.rs
crates/agx/tests/: architecture.rs
crates/oxiraw/: Cargo.toml  build.rs
crates/oxiraw-cli/: Cargo.toml  README.md
crates/oxiraw-cli/src/: batch.rs  main.rs
crates/oxiraw-cli/tests/: integration.rs
docs/contributing/: developer-workflow.md  evolving-architecture.md
docs/ideas/: README.md  advanced-research.md  color-grading.md  dehaze.md  (+20 more)
example/: README.md
scripts/: e2e-quick.sh  e2e.sh  verify.sh
(+56 files in other folders)
