[package]
name = "agx-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the agx photo editing library"
license = "MIT OR Apache-2.0"

[dependencies]
agx = { path = "../agx", features = ["raw"] }
clap = { version = "4", features = ["derive"] }
rayon = "1"

[dev-dependencies]
image = "0.25"
tempfile = "3"
