[package]
name = "agx"
version = "0.1.0"
edition = "2021"
description = "An open-source photo editing library with a readable, portable preset format"
license = "MIT OR Apache-2.0"

[dependencies]
image = "0.25"
imageproc = "0.25"
palette = "0.7"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
img-parts = "0.4"
little_exif = "0.6"
exif = { package = "kamadak-exif", version = "0.5", optional = true }

[build-dependencies]
cc = "1"

[features]
default = []
raw = ["exif"]
